feat: add service worker

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/png" href="/logo-nameless.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join A Board</title>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('./sw.js');
+        });
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
