--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="manifest" href="./manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join A Board</title>
+    <!-- <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('./sw.js');
+        });
+      }
+    </script> -->
   </head>
   <body>
     <div id="root"></div>
