--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="canonical" href="https://colette-exe.github.io/join-a-board/" />
     <link rel="icon" type="image/png" href="/logo-nameless.png" />
     <link rel="manifest" href="./manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join A Board</title>
     <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/join-a-board/sw.js', {scope: '/join-a-board/'});
-        });
-      }
+      if (navigator.serviceWorker) {
+    navigator.serviceWorker.register('/join-a-board/sw.js', {scope: '/join-a-board/'})
+  }
     </script>
   </head>
   <body>
