--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="canonical" href="https://colette-exe.github.io/join-a-board/" />
-    <link rel="icon" type="image/png" href="/logo-nameless.png" />
-    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/png" href="public/logo-nameless.png" />
+    <link rel="manifest" href="public/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join A Board</title>
     <script>
